feat(view): implement InputView
Implement InputView for handling user input in the vending machine program.

- Added method readMoney(boolean isVendingMachineMoney) to read and validate the amount of money entered by the user, ensuring it is a natural number and in multiples of 10.

- Added method readProduct(List<String> products) to prompt the user to enter the name of the product to purchase, with validation to ensure only Korean characters are allowed, and the entered product is valid.

- Added method readProductDetail() to handle input of product details, including name, price, and quantity. The input format is expected to be [한글,숫자,숫자], and thorough validation is applied to ensure the correctness of the input.

- Introduced private helper methods inputMoney(), validateMoney(String string), inputProduct(List<String> products), validateProduct(String string, List<String> products), inputProductsDetail(), and validateProductsDetail(List<String> stringList) to modularize the input handling and validation logic.