@@ -1,18 +1,15 @@
 package view;
 
 import camp.nextstep.edu.missionutils.Console;
-import utils.Parser;
-import java.util.*;
 
 import java.util.*;
 
 public class InputView {
-    // case1. 단일 숫자만 입력
-    public static int readNumber() {
-        System.out.println("시스템 시작");
+    public static int readMoney(boolean isVendingMachineMoney) {
+        OutputView.printInputMeony(isVendingMachineMoney);
         while (true) {
             try {
-                int number = inputNumber();
+                int number = inputMoney();
                 return number;
             } catch (IllegalArgumentException e) {
                 System.out.println(e.getMessage());
@@ -20,31 +17,28 @@ public class InputView {
         }
     }
 
-    private static int inputNumber() {
+    private static int inputMoney() {
         String string = Console.readLine();
-        // 숫자인가?
-        validateNumber(string);
+        validateMoney(string);
         return Integer.parseInt(string);
     }
 
-    private static void validateNumber(String string) {
-        // 숫자(0-9)만 허용하는 정규식
+    private static void validateMoney(String string) {
         if (!string.matches("^[0-9]+$")) {
             throw new IllegalArgumentException("[ERROR] 자연수만 허용됩니다.");
         }
-        //  특정 숫자 기준 존재
-        if (Integer.parseInt(string) > 5) {
-            throw new IllegalArgumentException("[ERROR] 5 미만의 수만 허용됩니다.");
+        if (Integer.parseInt(string) % 10 != 0) {
+            throw new IllegalArgumentException("[ERROR] 10원 단위로 입력해주세요.");
         }
     }
 
     // ============================ //
     // case2. 단일 문자열만 입력
-    public static String readString() {
-        System.out.println("시스템 시작");
+    public static String readProduct(List<String> products) {
+        System.out.println("구매할 상품명을 입력해 주세요.");
         while (true) {
             try {
-                String string = inputString();
+                String string = inputProduct(products);
                 return string;
             } catch (IllegalArgumentException e) {
                 System.out.println(e.getMessage());
@@ -52,34 +46,30 @@ public class InputView {
         }
     }
 
-    private static String inputString() {
+    private static String inputProduct(List<String> products) {
         String string = Console.readLine();
-        validateString(string);
+        validateProduct(string, products);
         return string;
     }
 
-    private static void validateString(String string) {
-        // 영어만 허용하는 정규식
-        if (!string.matches("^[a-zA-z]+$")) {
-            throw new IllegalArgumentException("[ERROR] 영어만 허용됩니다.");
-        }
+    private static void validateProduct(String string, List<String> products) {
 //        // 한글만 허용하는 정규식
-//        if (!string.matches("^[가-힣]+$")) {
-//            throw new IllegalArgumentException("[ERROR] 한글만 허용됩니다.");
-//        }
+        if (!string.matches("^[가-힣]+$")) {
+            throw new IllegalArgumentException("[ERROR] 한글만 허용됩니다.");
+        }
         // 특정 문자만 허용하는 정규식(U와 D만 허용)
-        if (!string.equals("U") || string.equals("D")) {
-            throw new IllegalArgumentException("[ERROR] U와 D만 허용됩니다.");
+        if (!products.contains(string)) {
+            throw new IllegalArgumentException("[ERROR] 없는 상품 입니다.");
         }
     }
 
     // ============================ //
     // case3. 구분자로 문자를 입력 받는 경우 - String
-    public static List<String> readStringList() {
-        System.out.println("시스템 시작");
+    public static List<String> readProductDetail() {
+        System.out.println("상품명과 가격, 수량을 입력해 주세요.");
         while (true) {
             try {
-                List<String> stringList = inputStringList();
+                List<String> stringList = inputProductsDetail();
                 return stringList;
             } catch (IllegalArgumentException e) {
                 System.out.println(e.getMessage());
@@ -88,68 +78,26 @@ public class InputView {
     }
 
     // 쉼표(,) + 공백 불허를 기준으로 구분 (ex) 김성한,포비,해피 / 김성한
-    private static List<String> inputStringList() {
-        List<String> stringList = List.of(Console.readLine().split(","));
-        validateStringList(stringList);
+    private static List<String> inputProductsDetail() {
+        List<String> stringList = Arrays.asList(Console.readLine().split(";"));
+        validateProductsDetail(stringList);
         return stringList;
     }
 
-    private static void validateStringList(List<String> stringList) {
-        Set<String> uniqueNames = new HashSet<>();
-
+    private static void validateProductsDetail(List<String> stringList) {
         for (String string : stringList) {
-            // 문자열의 길이 제한 확인
-            if (string.length() > 5) {
-                throw new IllegalArgumentException("[ERROR] 예시를 참고해주세요. 문자열의 길이는 5 미만 입니다.");
+            // 정해진 형식 확인
+            if (!string.matches("\\[([가-힣]+),(\\d+),(\\d+)\\]")) {
+                throw new IllegalArgumentException("[ERROR] [한글,숫자,숫자]의 형식을 지켜주세요.");
             }
-            // (영어 대소문자 + 숫자 + 한글) 만 허용
-            if (!string.matches("^[a-zA-Z0-9가-힣]+$")) {
-                throw new IllegalArgumentException("[ERROR] 특수문자 및 공백은 불허합니다.");
+            String product = string.split(",")[0];
+            int money = Integer.parseInt(string.split(",")[1]);
+            int productNumber = Integer.parseInt(string.split(",")[2]);
+            if (money < 100 || money % 10 != 0) {
+                throw new IllegalArgumentException("[ERROR] 상품의 가격은 최소 100원이며, 10원 단위입니다.");
             }
-            // 이미 나타난 이름인지 확인 - 중복체크
-            if (!uniqueNames.add(string)) {
-                throw new IllegalArgumentException("[ERROR] 중복된 것이 존재합니다.");
-            }
-        }
-    }
-
-    // ============================ //
-    // case4. 구분자로 숫자를 입력 받는 경우 - Integer
-    public static List<Integer> readIntList() {
-        System.out.println("시스템 시작");
-        while (true) {
-            try {
-                List<Integer> intList = inputIntList();
-                return intList;
-            } catch (IllegalArgumentException e) {
-                System.out.println(e.getMessage());
-            }
-        }
-    }
-
-    // 쉼표(,)를 기준으로 구분 (ex) 1,2,3 / 1
-    private static List<Integer> inputIntList() {
-        List<String> stringList = List.of(Console.readLine().split(","));
-        validateIntList(stringList);
-        List<Integer> intList = Parser.parseInteger(stringList);
-        return intList;
-    }
-
-    private static void validateIntList(List<String> intList) {
-        Set<String> uniqueNames = new HashSet<>();
-
-        for (String number : intList) {
-            // 숫자 판단
-            if (!number.matches("^[0-9]+$")) {
-                throw new IllegalArgumentException("[ERROR] 숫자만 허용됩니다.");
-            }
-            // 특정수 기준 이하, 미만, 이상, 초과 판단
-            if (Integer.parseInt(number) > 5) {
-                throw new IllegalArgumentException("[ERROR] 5 이상만 허용됩니다.");
-            }
-            // 중복 판단
-            if (!uniqueNames.add(number)) {
-                throw new IllegalArgumentException("[ERROR] 중복된 것이 존재합니다.");
+            if (productNumber < 1) {
+                throw new IllegalArgumentException("[ERROR] 상품의 수량은 최소 1개입니다.");
             }
         }
     }
